@@ -68,16 +68,14 @@
     </distributionManagement>
 
     <properties>
-        <java.version>1.8</java.version>
+        <java.version>11</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 
-        <checker.framework.version>3.8.0</checker.framework.version>
-        <javac.version>9+181-r4173-1</javac.version>
-        <annotatedJdk>${settings.localRepository}/com/google/errorprone/javac/${javac.version}/javac-${javac.version}.jar</annotatedJdk>
+        <checker.framework.version>3.10.0</checker.framework.version>
 
         <junit-minor.version>7.0</junit-minor.version>
         <junit.version>5.${junit-minor.version}</junit.version>
-        <mockito.version>3.6.0</mockito.version>
+        <mockito.version>3.8.0</mockito.version>
         <derive4j.version>1.1.1</derive4j.version>
     </properties>
 
@@ -89,8 +87,7 @@
                     <artifactId>maven-compiler-plugin</artifactId>
                     <version>3.7.0</version>
                     <configuration>
-                        <source>${java.version}</source>
-                        <target>${java.version}</target>
+                        <release>${java.version}</release>
 
                         <useIncrementalCompilation>false</useIncrementalCompilation>
 
@@ -124,7 +121,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.7.9</version>
+                <version>0.8.6</version>
                 <configuration>
                     <!-- Exclude code generated by derive4j -->
                     <excludes>
@@ -227,7 +224,7 @@
                                     <fork>true</fork>
 
                                     <compilerArgs>
-                                        <arg>-J-Xbootclasspath/p:${annotatedJdk}</arg>
+                                        <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                                         <arg>-Astubs=checkerframework/stubs</arg>
                                         <arg>-AstubWarnIfNotFound</arg>
                                     </compilerArgs>
@@ -247,13 +244,6 @@
                     </plugin>
                 </plugins>
             </build>
-            <dependencies>
-                <dependency>
-                    <groupId>com.google.errorprone</groupId>
-                    <artifactId>javac</artifactId>
-                    <version>${javac.version}</version>
-                </dependency>
-            </dependencies>
         </profile>
 
         <profile>
@@ -349,7 +339,7 @@
         <dependency>
             <groupId>org.junit-pioneer</groupId>
             <artifactId>junit-pioneer</artifactId>
-            <version>1.0.0</version>
+            <version>1.3.0</version>
             <scope>test</scope>
         </dependency>
 
